# neural-stock-prophet

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  args.py  decompose.py  main.py  model.py  portfolio.py  prophet.py  pyproject.toml  requirements.txt  test.py  utils.py
.github/workflows/: python-publish.yml
docs/: index.md
neuralstockprophet/: __init__.py  dataset.py  model.py  portfolio.py  prophet.py  risk_strategy.py  utils.py
prophet/: __init__.py  decompose.py  portfolio.py  prophet.py  utils.py
src/: args.py  arima.py  dataset.py  decompose.py  model.py  portfolio.py  prophet.py  risk_distribution.py  utils.py
test_package/: pyvenv.cfg
tests/: test_nsp.py  test_portfolio.py
