[tool.poetry]
name = "neuralstockprophet"
version = "1.0.0"
description = "LSTM-ARIMA with Attention and multiplicative decomposition for sophisticated stock forecasting."
license = "MIT"
authors = ["Lucas Chan <chanconan@gmail.com >"]
readme = "README.md"
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Programming Language :: Python :: 3 :: Only",
]
packages = [ {include = "neuralstockprophet"} ]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/lucaswychan/neural-stock-prophet"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.20.1"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"
scipy = "^1.6.1"
statsmodels = "^0.12.2"
ta = "^0.11.0"
tensorflow = "^2.16.1"
quadprog = "^0.1.12"
jax = "^0.4.26"
jaxlib = "^0.4.26"
tqdm = "^4.66.4"
riskparityportfolio = "^0.5.1"
yfinance = "^0.1.63"
empyrical = "^0.5.5"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"